# smallpost

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  app.py  compose.dev.yaml  compose.yaml  config.py  pyproject.toml  requirements.txt
app/: __init__.py  app.py  config.py  extensions.py  routes.py  utils.py
app/api/auth/: __init__.py  endpoint.py  model.py  utils.py
app/posts/: __init__.py  controller.py  endpoint.py  model.py  postDTO.py
app/up/: __init__.py  controller.py
docker/: Dockerfile
posts/: __init__.py  post.py
posts/templates/: post.html
small_post/posts/: post.py
